# nurgaleeva_ka_precommit

./: .pre-commit-config.yaml  README.md  pyproject.toml  test.py
