[project]
name = "nurgaleeva-ka-precommit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "ty>=0.0.26",
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
